--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +12,20 @@
   <!-- css file -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="box box-bg">
       <h1>Search Lyrics</h1>
       <form id="form">
         <input type="search" id="search" placeholder="Enter artist name or song title">
-        <button type="submit" class="btn">Search</button>
+        <button class="btn" type="submit">Search</button>
       </form>
-      <div id="loading" class="loading">Loading...</div>
     </div>
     <section class="result box" id="result"></section>
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
 
