--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </form>
     </div>
     <section class="result box" id="result"></section>
+    <section class="saved-lyrics box" id="saved-lyrics">
+      <h2>Saved Lyrics</h2>
+      <ul id="saved-lyrics-list"></ul>
+    </section>
   </div>
   <script src="script.js"></script>
 </body>
