--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <h2>Saved Lyrics</h2>
       <ul id="saved-lyrics-list"></ul>
     </section>
+    <div id="backBtn" class="btn back" style="display:none;">Back</div>
+    <div class="developer">Developed by: Julius Korir</div>
   </div>
   <script src="script.js"></script>
 </body>
