--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="saved-lyrics-list" class="box box-bg">
             <h2>Saved Lyrics</h2>
         </div>
-        <div class="developer">Developed by: Korir k Julius</div>
+        <div class="developer">Developed by Korir Julius</div>
     </div>
     <script src="script.js"></script>
 </body>
